fix content not being aligned horizontally

--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -8,7 +8,7 @@
     &__content {
         display: flex;
         flex-flow: row nowrap;
-        justify-content: space-around;
+        justify-content: space-between;
     
         max-width: 128em;
         margin: 0 auto; // center;
