--- a/src/Containers/CareersSection/CareersSection.scss
+++ b/src/Containers/CareersSection/CareersSection.scss
@@ -4,7 +4,7 @@
     justify-content: space-between;
 
     max-width: 128rem;
-    padding: 4rem;
+    padding: 4rem 0;
     margin: 0 auto;
 }
 
