--- a/src/Containers/RestaurantList/RestaurantList.scss
+++ b/src/Containers/RestaurantList/RestaurantList.scss
@@ -2,7 +2,7 @@
     &-section {
         max-width: 128rem;
         margin: 0 auto;
-        padding: 4rem;
+        padding: 4rem 0;
     }
 
     &__header {
